--- a/index.html
+++ b/index.html
@@ -305,6 +305,47 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                <div class="portfolio-img">
+                                    <img src="/images/portfolio/portfolio-2.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                <div class="portfolio-img">
+                                    <img src="/images/portfolio/portfolio-3.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                <div class="portfolio-img">
+                                    <img src="/images/portfolio/portfolio-4.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                <div class="portfolio-img">
+                                    <img src="/images/portfolio/portfolio-5.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                <div class="portfolio-img">
+                                    <img src="/images/portfolio/portfolio-6.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        
                     </div>
                 </div>
             </section>
