--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="skin/style.css">
     <link rel="stylesheet" href="skin/css/color-1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    
+    <!-- style switcher -->
+    <link rel="stylesheet" href="skin/css/color-1.css" class="alternate-style" title="color-1" disabled>
+    <link rel="stylesheet" href="skin/css/color-2.css" class="alternate-style" title="color-2" disabled>
+    <link rel="stylesheet" href="skin/css/color-3.css" class="alternate-style" title="color-3" disabled>
+    <link rel="stylesheet" href="skin/css/color-4.css" class="alternate-style" title="color-4" disabled>
+    <link rel="stylesheet" href="skin/css/color-5.css" class="alternate-style" title="color-5" disabled>
+    <link rel="stylesheet" href="/skin/style-switcher.css">
 </head>
 <body>
     <!-- main container  -->
@@ -20,15 +28,15 @@
                 <span></span>
             </div>
             <ul class="nav">
-                <li><a href="#" class="active"><i class="fa fa-home"></i>Home</a></li>
-                <li><a href="#"><i class="fa fa-user"></i>About</a></li>
-                <li><a href="#"><i class="fa fa-list"></i>Services</a></li>
-                <li><a href="#"><i class="fa fa-briefcase"></i>Portfolio</a></li>
-                <li><a href="#"><i class="fa fa-comments"></i>Contacts</a></li>
+                <li><a href="home" class="active"><i class="fa fa-home"></i>Home</a></li>
+                <li><a href="about"><i class="fa fa-user"></i>About</a></li>
+                <li><a href="service"><i class="fa fa-list"></i>Services</a></li>
+                <li><a href="portfolio"><i class="fa fa-briefcase"></i>Portfolio</a></li>
+                <li><a href="contact"><i class="fa fa-comments"></i>Contacts</a></li>
             </ul>
         </div>
         <div class="main-content">
-            <section class="home section hidden">
+            <section class="home section">
                 <div class="container">
                     <div class="row">
                         <div class="home-info padd-15">
@@ -45,7 +53,7 @@
             </section>
 
             <!-- About Section -->
-            <section class="about section hidden">
+            <section class="about section">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -210,7 +218,7 @@
             </section>
 
             <!-- services section -->
-            <section class="service section hidden">
+            <section class="service section">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -284,7 +292,7 @@
 
             <!-- portfolio -->
 
-            <section class="portfolio section hidden">
+            <section class="portfolio section">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -432,7 +440,27 @@
             </section>
         </div>
     </div>
+
+    <!-- style switcher -->
+    <div class="style-switcher">
+        <div class="style-switcher-toggler s-icon">
+            <i class="fas fa-cog fa-spin"></i>
+        </div>
+        <div class="day-night s-icon">
+            <i class="fas fa-moon"></i>
+        </div>
+        <h4>Theme Colors</h4>
+        <div class="colors">
+            <span class="color-1" onclick="setActiveStyle('color-1')"></span>
+            <span class="color-2" onclick="setActiveStyle('color-2')"></span>
+            <span class="color-3" onclick="setActiveStyle('color-3')"></span>
+            <span class="color-4" onclick="setActiveStyle('color-4')"></span>
+            <span class="color-5" onclick="setActiveStyle('color-5')"></span>
+        </div>
+    </div>
+
+    <!-- script -->
+<script src="js/style-switcher.js"></script>
+<script src="js/script.js"></script>
 </body>
-<!-- script -->
-<script src="script.js"></script>
 </html>
