--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
                 <span></span>
             </div>
             <ul class="nav">
-                <li><a href="home" class="active"><i class="fa fa-home"></i>Home</a></li>
-                <li><a href="about"><i class="fa fa-user"></i>About</a></li>
-                <li><a href="service"><i class="fa fa-list"></i>Services</a></li>
-                <li><a href="portfolio"><i class="fa fa-briefcase"></i>Portfolio</a></li>
-                <li><a href="contact"><i class="fa fa-comments"></i>Contacts</a></li>
+                <li><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
+                <li><a href="#about"><i class="fa fa-user"></i>About</a></li>
+                <li><a href="#service"><i class="fa fa-list"></i>Services</a></li>
+                <li><a href="#portfolio"><i class="fa fa-briefcase"></i>Portfolio</a></li>
+                <li><a href="#contact"><i class="fa fa-comments"></i>Contacts</a></li>
             </ul>
         </div>
         <div class="main-content">
-            <section class="home section">
+            <section class="home section" id="home">
                 <div class="container">
                     <div class="row">
                         <div class="home-info padd-15">
@@ -53,7 +53,7 @@
             </section>
 
             <!-- About Section -->
-            <section class="about section">
+            <section class="about section" id="about">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -218,7 +218,7 @@
             </section>
 
             <!-- services section -->
-            <section class="service section">
+            <section class="service section" id="service">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -292,7 +292,7 @@
 
             <!-- portfolio -->
 
-            <section class="portfolio section">
+            <section class="portfolio section" id="portfolio">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -359,7 +359,7 @@
             </section>
 
             <!-- contact section -->
-            <section class="contact section">
+            <section class="contact section" id="contact">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -447,7 +447,7 @@
             <i class="fas fa-cog fa-spin"></i>
         </div>
         <div class="day-night s-icon">
-            <i class="fas fa-moon"></i>
+            <i class="fas "></i>
         </div>
         <h4>Theme Colors</h4>
         <div class="colors">
