--- a/index.html
+++ b/index.html
@@ -460,6 +460,8 @@
     </div>
 
     <!-- script -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.16/typed.umd.js"
+    referrerpolicy="no-referrer"></script>
 <script src="js/style-switcher.js"></script>
 <script src="js/script.js"></script>
 </body>
